# ukui-power-manager

./: AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  powermanagement.pro  readme.md  ukui-power-manager.pro
.github/workflows/: build.yml
PowerManagementDaemon/: .clang-format  PowerManagementDaemon.pro  common.h  eventwatcher.cpp  eventwatcher.h  main.cpp  powermanagementdamon.cpp  powermanagementdamon.h
PowerManagementDaemon/acwatcher/: acwatcher.cpp  acwatcher.h
PowerManagementDaemon/brightnessbutton/: buttonwatcher.cpp  buttonwatcher.h
PowerManagementDaemon/gsettingwatcher/: gsettingwatcher.cpp  gsettingwatcher.h
PowerManagementDaemon/idle/: idlenesswatcher.cpp  idlenesswatcher.h
PowerManagementDaemon/lidwatcher/: lidwatcher.cpp  lidwatcher.h
PowerManagementDaemon/lowpowerwatcher/: lowpowerwatcher.cpp  lowpowerwatcher.h
PowerManagementDaemon/powermsgnotificat/: powermsgnotificat.cpp  powermsgnotificat.h
PowerManagementDaemon/powerwatcher/: common.h  powerwatcher.cpp  powerwatcher.h
PowerManagementDaemon/resources/: ukui-powermanagement-daemon.desktop
applets/brightness/: Makefile.am  brightness-applet.c  org.ukui.BrightnessApplet.ukui-panel-applet.in.in  org.ukui.panel.applet.BrightnessAppletFactory.service.in
applets/inhibit/: Makefile.am  gpm-common.c  inhibit-applet.c  org.ukui.InhibitApplet.ukui-panel-applet.in.in  org.ukui.panel.applet.InhibitAppletFactory.service.in
backlighthelper/: backlighthelper.pro  main.cpp
data/: 99-upower-wake-up-usb-device.rules  Makefile.am  org.ukui.PowerManager.service.in  org.ukui.power-manager.gschema.xml.in  power_policy.sh  ukui-power-manager  ukui-power-manager-tray.desktop.in.in  ukui-power-manager.1  ukui-power-manager.desktop.in.in  ukui-power-policy.1  ukui-power-policy.service  ukui-power-preferences.1  ukui-power-preferences.desktop.in.in  ukui-power-statistics-qt.1  ukui-power-statistics.1
data/icons/16x16/apps/: Makefile.am
data/icons/22x22/apps/: Makefile.am
data/icons/24x24/apps/: Makefile.am
data/icons/32x32/apps/: Makefile.am
data/icons/48x48/apps/: Makefile.am
data/icons/scalable/apps/: Makefile.am
debian/: changelog  control  copyright  debhelper-build-stamp  files  manpages  rules  ukui-power-manager-common.install  ukui-power-manager-common.lintian-overrides  ukui-power-manager.install  ukui-power-manager.postinst  ukui-power-manager.substvars  watch
doc/: schedules.md  性能测试注意事项.md  电源管理需求文档.md  设计文档.md
help/: Makefile.am  ukui-power-manager.omf.in
help/C/: index.docbook  legal.xml
help/ca/: ca.po
help/de/: de.po
help/el/: el.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/hu/: hu.po
help/it/: it.po
help/pa/: pa.po
help/ru/: ru.po
help/zh_CN/: zh_CN.po
man/: ukui-power-manager-tray.1  ukui-power-manager.1  ukui-power-manager.2  ukui-powermanagement-service.1  ukui-powermanagement.1  ukui-upower.1
po/: LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  bo_CN.po  br.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  (+51 more)
policy/: org.ukui.power.policy.in2
power-save/: Makefile  README.md  powerperformance  powerperformance.c  powersave  powersave.c  powersave.h
registeredQDbus/: main.cpp  registeredQDbus.pro  sysdbusregister.cpp  sysdbusregister.h
src/: Makefile.am  egg-array-float.c  egg-array-float.h  egg-color.c  egg-console-kit.c  egg-debug.c  egg-debug.h  egg-discrete.c  egg-discrete.h  egg-idletime.h  gpm-backlight-helper.c  gpm-backlight.c  gpm-brightness.c  gpm-button.c  gpm-button.h  gpm-common.c  gpm-common.h  gpm-control.c  gpm-dpms.c  gpm-engine.c  gpm-engine.h  gpm-icon-names.h  gpm-idle.c  gpm-idle.h  gpm-kbd-backlight.c  gpm-kbd-backlight.h  gpm-load.h  gpm-main.c  gpm-manager.c  gpm-manager.h  gpm-networkmanager.c  gpm-phone.c  gpm-phone.h  gpm-prefs-core.c  gpm-prefs.c  gpm-screensaver.c  gpm-self-test.c  gpm-session.c  gpm-session.h  gpm-statistics.c  (+8 more)
ukui-power-manager-tray/: DeviceUi.cpp  DeviceUi.h  MainUi.cpp  MainUi.h  bo.ts  customstyle.cpp  customstyle.h  customtype.cpp  customtype.h  device.cpp  device.h  device_form.cpp  device_form.h  device_widget.cpp  device_widget.h  deviceform.ui  devicewidget.ui  en.qm  en.ts  engine-common.h  engine_common.h  enginedevice.cpp  enginedevice.h  main.cpp  main.qss  mainwindow.cpp  mainwindow.h  mainwindow.ui  nMdbhX.json  powertray.cpp  powertray.h  powerwindow.cpp  powerwindow.h  remainlabel.cpp  remainlabel.h  resource.qrc  ukui-power-manager-tray.pro  zh_CN.qm  zh_CN.ts
ukui-power-policy/: dbus_struct.h  gsettings.cpp  gsettings.h  huawei.cpp  huawei.h  main.cpp  policy_config.cpp  policy_config.h  powerpolicy.cpp  powerpolicy.h  ukui-power-policy.pro  ukui.power.policy.xml
ukui-power-statistics/: Makefile.am  NEWS  README  bo.ts  customtype.cpp  customtype.h  device.cpp  device.h  eggunique.cpp  en.qm  en.ts  main.cpp  resource.qrc  statistics_common.h  titlewidget.cpp  titlewidget.h  ui.qss  ukpm-widget.cpp  ukpm-widget.h  ukpm_widget.cpp  ukpm_widget.h  ukui-power-statistics.pro  zh_CN.qm  zh_CN.ts
ukui-power-statistics/policy/: Makefile.am
ukui-upower/: README.md  dbus-ukuipower.h  dbus.cpp  dbus.h  main.cpp  ukui-upower.pro
(+228 files in other folders)
