themedir = $(datadir)/icons/hicolor
size = 16x16
context = apps

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 			  	\
	ukui-brightness-applet.png	\
	ukui-inhibit-applet.png	\
	ukui-power-manager.png		\
	ukui-power-statistics.png

noinst_DATA = 

EXTRA_DIST =		\
	$(icons_DATA)	\
	$(noinst_DATA)
