themedir = $(datadir)/icons/hicolor
size = scalable
context = apps

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 			  	\
	ukui-brightness-applet.svg	\
	ukui-inhibit-applet.svg	\
	ukui-power-manager.svg		\
	ukui-power-statistics.svg

noinst_DATA = 

EXTRA_DIST =		\
	$(icons_DATA)	\
	$(noinst_DATA)
